--- a/Documents/需求分析.md
+++ b/Documents/需求分析.md
@@ -1,7 +1,5 @@
 # 需求分析
 
-[TOC]
-
 ## 公司情况
 
 > 说明：入仓=入库，出仓=出库，供货单=送货单=供应单，规格=宽度，代理级别对应的单价=每平米价格
@@ -15,7 +13,7 @@
 
 ## 系统功能
 
-###主要功能
+### 主要功能
 
 > 由公司情况初步整理出来的
 
@@ -75,12 +73,18 @@
     ![用户权限对应功能](assets/用户权限对应功能.PNG)
 
 2. 入仓批号、条形码、供货单号的生成规则
-    入仓批号：P-1000-190708-123    P-规格( * 1000)-yyMMdd-流水号
-    条码：1000-190708-2-3-25           规格( * 1000)-yyMMdd-机器-卷数(又叫大卷)-流水号
-    送货单号：201907-0007                yyyyMM-流水号
-    每日入库批次(同规格)数最大为 999 批
-    每日入库货物(同规格、机器、大卷)数最大为 99 件
-    每月送货单数最大为 9999 张
+
+    - 入仓批号：P-1000-190708-123    P-规格( * 1000)-yyMMdd-流水号
+
+    - 条码：1000-190708-2-3-25           规格( * 1000)-yyMMdd-机器-卷数(又叫大卷)-流水号
+
+    - 送货单号：201907-0007                yyyyMM-流水号
+
+        每日入库批次(同规格)数最大为 999 批
+
+        每日入库货物(同规格、机器、大卷)数最大为 99 件
+
+        每月送货单数最大为 9999 张
 
 3. 同一批货物只要其中一个货物出仓后，就不可以删除该入仓批号（系统管理员可以）
 
@@ -94,83 +98,134 @@
 
 #### Agent 客户
 ID          int             自增
+
 Name        varchar(50)     主键  公司名
+
 Contact     varchar(50)     可空  联系人
+
 Phone       varchar(50)     可空  手机
+
 Address     varchar(200)    可空  地址
+
 LevelName   varchar(50)     可空  代理级别
+
 Tel         varchar(50)     可空  固定电话
+
 Fox         varchar(50)     可空  传真
 
 #### Argument 参数(用来保存公司信息)
-ArgName     varchar(50)           包括四个参数：Name, Phone, Address, GoodsName        
+ArgName     varchar(50)           包括四个参数：Name, Phone, Address, GoodsName
+
 ArgValue    varchar(50)     可空  参数值
 
 #### InW 入仓记录
 ID          int             自增
+
 Batch       varchar(50)     主键  货物批号
+
 NormName    varchar(50)     可空  货物规格
+
 Barcode     varchar(100)    可空  本批货物第一个条码~最后一个条码
+
 CreateTime  datetime        可空  数据库内的记录生成时间(自动)
+
 Operator    varchar(50)     可空  入仓记录人员
+
 Cnt         int             可空  本批货物总件数
+
 InTime      datetime        可空  货物入仓时间
+
 BigCnt      int             可空  货物入仓大卷
+
 Machine     int             可空  货物入仓机器
+
 Length      int             可空  货物入仓米数
+
 Model       varchar(50)     可空  货物型号
 
 #### InWDetail 入仓记录详情
 Batch       varchar(50)     可空  货物批号
+
 Barcode     varchar(50)     可空  货物条码
+
 NormName    varchar(50)     可空  货物规格
+
 Cnt         int             可空  货物件数
+
 CreateTime  datetime        可空  数据库内的记录生成时间(自动)
+
 PrintCnt    int             可空  货物条码打印次数
+
 Length      int             可空  货物入仓米数
+
 Model       varchar(50)     可空  货物型号
 
 #### Level 代理级别
 LevelID     int             自增
+
 LevelName   varchar(50)     主键  代理级别名称
+
 Price       money           可空  代理级别对应的价格
 
 #### LevelPrice `(没用)`
 ID          int             自增
+
 LevelName   varchar(50)
+
 ApplyDate   datetime
+
 Price       money           可空
+
 Operator    varchar(50)     可空
+
 OperatorTime    datetime    可空
 
 #### Norm 规格
 NormID      int             主键
+
 NormName    varchar(50)     可空  规格
 
 #### Supply 供应单
 ID          int             自增
+
 SupplyID    varchar(50)     主键  供应单单号
+
 AgentName   varchar(50)           客户名
+
 Price       money                 单价
+
 SumPrice    money                 总价(每一件货物的总价相加)
+
 Operator    varchar(50)           记录填写人员
+
 CreateTime  datetime              数据库内的记录生成时间(自动)
 
 #### SupplyDetail 供应单详情
 SupplyID    varchar(50)           供应单单号
+
 Barcode     varchar(50)           条码
+
 NormName    varchar(50)     可空  货物规格
+
 Price       money           可空  单价
+
 SumMoney    money           可空  总价(单价*米数)
+
 Cnt         int             可空  件数
+
 CreateTime  datetime        可空  数据库内的记录生成时间(自动)
+
 Length      int             可空  货物米数
+
 Model       varchar(50)     可空  货物型号
 
 #### User 系统用户
 UserID      int             自增
+
 UserName    varchar(50)     主键  用户名
+
 UserPwd     varchar(50)     可空  用户密码(默认密码：123456)
+
 Position    varchar(50)     可空  身份权限
 
 ## 代码实现
@@ -198,14 +253,23 @@ Position    varchar(50)     可空  身份权限
 
 ##### 文件夹 Service（Model 层）
 Agent.cs
+
 InW.cs
+
 InWDetail.cs
+
 Level.cs
+
 Norm.cs
+
 Supply.cs
+
 SupplyDetail.cs
+
 SupplyRPT.cs
+
 User.cs
+
 OutW.cs `无用`
 
 ##### 文件夹 Properties
