--- a/Documents/需求分析.md
+++ b/Documents/需求分析.md
@@ -74,11 +74,11 @@
 
 2. 入仓批号、条形码、供货单号的生成规则
 
-    - 入仓批号：P-1000-190708-123    P-规格( * 1000)-yyMMdd-流水号
+    - 入仓批号：P-1000-190708-123 `P-规格( * 1000)-yyMMdd-流水号`
 
-    - 条码：1000-190708-2-3-25           规格( * 1000)-yyMMdd-机器-卷数(又叫大卷)-流水号
+    - 条码：1000-190708-2-3-25 `规格( * 1000)-yyMMdd-机器-卷数(又叫大卷)-流水号`
 
-    - 送货单号：201907-0007                yyyyMM-流水号
+    - 送货单号：201907-0007 `yyyyMM-流水号`
 
         每日入库批次(同规格)数最大为 999 批
 
