fix 需求分析.md 中数据设计 InWDetail 表错误

--- a/Documents/需求分析.md
+++ b/Documents/需求分析.md
@@ -150,7 +150,7 @@ Length      int             可空  货物入仓米数
 Model       varchar(50)     可空  货物型号
 
 #### InWDetail 入仓记录详情
-Batch       varchar(50)     可空  货物批号
+BatchID       varchar(50)     可空  货物批号
 
 Barcode     varchar(50)     可空  货物条码
 
